Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87984

QTransform reports type TxRotate instead of TxShear for shear transforms

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • 5.14.2
    • GUI: Painting
    • None
    • 30151e20b88c7c93090e1d2a408542d945acff5b (qt/tqtc-qtbase/5.15) 7aa68ee6f2e08ce0b4f5c698a8c012895f738dd2 (qt/tqtc-qtbase/dev)

    Description

      The attached code demonstrates the issue. The QTransform in the example has type() TxRotate, but in fact it's a shear transform.

      Since TxShear > TxRotate, it's assumed that transforms with type TxRotate are not shearing.

      Attachments

        1. foo.png
          foo.png
          2 kB
        2. main.cpp
          0.6 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            rodal Samuel Rødal
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes