Fix misidentification of some shearing QTransforms as only rotating

The dot product used rows instead of columns.

Fixes: QTBUG-87984
Change-Id: I922f67ed0fa9a4f88aa4e9fc6d3c09f8dda21688
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 7aa68ee6f2e08ce0b4f5c698a8c012895f738dd2)